--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-src = {editable = true, file = "file:///home/natsuki-iwano/raptgen"}
+src = {editable = true, path = "./raptgen"}
 click = "==7.1.2"
 scikit-learn = "==0.23.2"
 tqdm = "==4.41.1"
